feat: Implement high DPI support and global exception handling in SAM.Game and SAM.Picker
- Added high DPI support using Application.SetHighDpiMode.
- Implemented global exception handling with logging for unhandled exceptions in both SAM.Game and SAM.Picker.
- Initialized services and theming on application startup.
- Enhanced logging to track application start and close events.

refactor: Introduce AppConfig and IconCache for centralized configuration and caching

- Created AppConfig class to load application settings from appsettings.json.
- Added IconCache class to manage local caching of downloaded icons, reducing repeated downloads.
- Updated API calls in GamePicker to utilize the new configuration and caching mechanisms.

chore: Clean up unused code and improve performance

- Removed unnecessary BackgroundWorker instances from GamePicker.
- Simplified exception handling in StatIsProtectedException by removing serialization.
- Cleaned up app.manifest files by removing obsolete DPI settings.
- Refactored image downloading logic in GamePicker to use async/await with throttling for better performance.

style: Enhance theming support across the application

- Implemented ThemeManager to manage light and dark themes.
- Applied theming to various controls in the application for a consistent look and feel.
- Added a theme toggle button in GamePicker for user convenience.

test: Ensure logging captures errors and application flow

- Added logging for application lifecycle events and error handling to improve traceability.

--- a/SAM.API/SAM.API.csproj
+++ b/SAM.API/SAM.API.csproj
@@ -19,6 +19,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <TargetFramework>net8.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
     <LangVersion>latest</LangVersion>
     <Platforms>x86</Platforms>
   </PropertyGroup>
@@ -28,4 +29,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
