Add custom StoreScrollBar and StoreTitleBar controls with theme support
- Implemented StoreScrollBar for modern thin scrollbar functionality with transparent background.
- Created StoreTitleBar for a custom title bar with smooth hover effects and custom-drawn window control buttons.
- Introduced StoreToolStripRenderer for custom ToolStrip styling in both SAM.Game and SAM.Picker namespaces.
- Enhanced theme support across new controls to ensure consistent styling with StoreThemeColors.

--- a/SAM.API/SAM.API.csproj
+++ b/SAM.API/SAM.API.csproj
@@ -28,10 +28,16 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <!-- Performance: Enable tiered compilation with PGO -->
+    <TieredCompilation>true</TieredCompilation>
+    <TieredPGO>true</TieredPGO>
   </PropertyGroup>
   <ItemGroup>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ReaLTaiizor" Version="3.8.1.5" />
   </ItemGroup>
 </Project>
