feat: Add Statistics Page with user data visualization
- Implemented StatisticsPage.xaml and StatisticsPage.xaml.cs for displaying user statistics.
- Added navigation item for Statistics in MainWindow.xaml and MainWindow.xaml.cs.
- Introduced data models for statistics history and entries.
- Integrated user data service to load statistics from local user data cache.
- Added converters for UI bindings and visibility management.
- Created unit tests for converters to ensure correct functionality.

--- a/SAM.Core.Tests/SAM.Core.Tests.csproj
+++ b/SAM.Core.Tests/SAM.Core.Tests.csproj
@@ -8,7 +8,11 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <LangVersion>latest</LangVersion>
-    <UseWinUI>false</UseWinUI>
+    <UseWinUI>true</UseWinUI>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(IncludeManagerTests)' == 'true'">
+    <DefineConstants>$(DefineConstants);MANAGER_TESTS</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -27,6 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SAM.Core\SAM.Core.csproj" />
+    <ProjectReference Include="..\SAM.Manager\SAM.Manager.csproj" Condition="'$(IncludeManagerTests)' == 'true'" />
   </ItemGroup>
 
 </Project>
